@@ -24,6 +24,9 @@ import io.trino.spi.connector.*;
 
 import static io.trino.spi.function.table.ReturnTypeSpecification.GenericTable.GENERIC_TABLE;
 
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -69,18 +72,51 @@ public class RawQuery
             super(
                     SCHEMA_NAME,
                     NAME,
-                    List.of(
+                    ImmutableList.of(
                             ScalarArgumentSpecification.builder()
                                     .name("SCHEMA")
                                     .type(VARCHAR)
+                                    .defaultValue(null)
                                     .build(),
                             ScalarArgumentSpecification.builder()
                                     .name("INDEX")
                                     .type(VARCHAR)
+                                    .defaultValue(null)
+                                    .build(),
+                            ScalarArgumentSpecification.builder()
+                                    .name("SCENE")
+                                    .type(VARCHAR)
+                                    .defaultValue(null)
+                                    .build(),
+                            ScalarArgumentSpecification.builder()
+                                    .name("METRIC")
+                                    .type(VARCHAR)
+                                    .defaultValue(null)
+                                    .build(),
+                            ScalarArgumentSpecification.builder()
+                                    .name("FUNCTION")
+                                    .type(VARCHAR)
+                                    .defaultValue(null)
+                                    .build(),
+                            ScalarArgumentSpecification.builder()
+                                    .name("START_TIME")
+                                    .type(VARCHAR)
+                                    .defaultValue(null)
+                                    .build(),
+                            ScalarArgumentSpecification.builder()
+                                    .name("END_TIME")
+                                    .type(VARCHAR)
+                                    .defaultValue(null)
+                                    .build(),
+                            ScalarArgumentSpecification.builder()
+                                    .name("GROUP_BY")
+                                    .type(VARCHAR)
+                                    .defaultValue(null)
                                     .build(),
                             ScalarArgumentSpecification.builder()
                                     .name("QUERY")
                                     .type(VARCHAR)
+                                    .defaultValue(null)
                                     .build()),
                     GENERIC_TABLE);
             this.metadata = requireNonNull(metadata, "metadata is null");
@@ -88,9 +124,79 @@ public class RawQuery
 
         @Override
         public TableFunctionAnalysis analyze(ConnectorSession session, ConnectorTransactionHandle transaction, Map<String, Argument> arguments, ConnectorAccessControl accessControl) {
-            String schema = ((Slice) ((ScalarArgument) arguments.get("SCHEMA")).getValue()).toStringUtf8();
-            String index = ((Slice) ((ScalarArgument) arguments.get("INDEX")).getValue()).toStringUtf8();
-            String query = ((Slice) ((ScalarArgument) arguments.get("QUERY")).getValue()).toStringUtf8();
+            String index = getStringArgument(arguments, "INDEX");
+            String schema = getStringArgument(arguments, "SCHEMA");
+            String query = getStringArgument(arguments, "QUERY");
+
+            String scene = getStringArgument(arguments, "SCENE");
+            String start_time = getStringArgument(arguments, "START_TIME");
+            String end_time = getStringArgument(arguments, "END_TIME");
+            String metric = getStringArgument(arguments, "METRIC");
+            String function = getStringArgument(arguments, "FUNCTION");
+            String group_by = getStringArgument(arguments, "GROUP_BY");
+            boolean calFunction = function.equals("mean") || function.equals("min") || function.equals("max");
+
+            // 封装场景
+            if (query.isEmpty()) {
+                if (!calFunction){
+                    return TableFunctionAnalysis.builder().build();
+                }
+
+                // 默认7天
+                if (start_time.isEmpty() || end_time.isEmpty()) {
+                    DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss'Z'");
+
+                    // 格式化时间为所需的格式
+                    start_time = LocalDateTime.now().minusDays(7).format(formatter);
+                    end_time = LocalDateTime.now().format(formatter);
+                }
+
+                // 主机性能指标
+                if (scene.equals("host")) {
+                    schema = "system";
+                    if (metric.equals("cpu_info")) {
+                        metric = "usage";
+                        index = "cpu_summary";
+                    } else if (metric.equals("memory_info")) {
+                        metric = "pct_used";
+                        index = "mem";
+                    }
+
+                    query += String.format("""
+                            SELECT
+                                %s(%s) as %s
+                            FROM
+                                %s
+                            WHERE
+                              time>'%s'
+                              AND time<'%s'\s
+                              """, function, metric, metric, index, start_time, end_time);
+
+                    if (group_by.isEmpty()) {
+                        group_by += "hostname, ip, bk_cloud_id, bk_biz_id";
+                    } else {
+                        group_by += " ,hostname, ip, bk_cloud_id, bk_biz_id";
+                    }
+                } else if(scene.equals("plugin")) {
+                    query += String.format("""
+                            SELECT
+                                %s(metric_value) as metric_value
+                            FROM
+                                %s
+                            WHERE
+                              time>'%s'
+                              AND time<'%s'
+                              AND metric_name = '%s'\s
+                              """, function, index, start_time, end_time, metric);
+                }
+
+                if (!group_by.isEmpty()) {
+                    query += String.format("""
+                            GROUP BY
+                                %s
+                            """, group_by);
+                }
+            }
 
             InfluxTableHandle tableHandle = new InfluxTableHandle(schema, index, ImmutableList.of(), Optional.of(query));
             ConnectorTableSchema tableSchema = metadata.getTableSchema(session, tableHandle);
@@ -111,6 +217,11 @@ public class RawQuery
                     .returnedType(returnedType)
                     .handle(handle)
                     .build();
+        }
+
+        private static String getStringArgument(Map<String, Argument> arguments, String argName) {
+            Slice slice = ((Slice) ((ScalarArgument) arguments.get(argName)).getValue());
+            return slice != null ? slice.toStringUtf8() : "";
         }
 
     }
